<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_odometry_ros</name>
  <version>1.0.0</version>
  <description>ROS2 wrapper for LiDAR odometry with Probabilistic Kernel Optimization (PKO)</description>
  
  <maintainer email="csw3575@snu.ac.kr">Eugene</maintainer>
  <license>MIT</license>
  
  <author email="csw3575@snu.ac.kr">Seungwon Choi</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>
  
  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  
  <!-- System dependencies -->
  <depend>eigen3_cmake_module</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libceres-dev</depend>
  
  <!-- Build dependencies -->
  <build_depend>pkg-config</build_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
